--- a/pages/contacte.html
+++ b/pages/contacte.html
@@ -16,8 +16,10 @@
       <img class= "header-logo"src="../Images/logo.png"alt="Logoul siteului"/>
       <div id="navbar"class="nav">   
         <a href="../index.html" >Home</a>
-      <a href=""> Info</a>
-      <a href=""class="active">Contacte</a>
+        <a href="info.html"  > Info</a>
+        <a href="contacte.html" class="active">Contacte</a>
+        <a href="despre.html">Despre</a>
+        <a href="file din istorie.html"> File din istorie</a>
       <a class="hamburger-menu"onclick="mobileMenu()"><i class="fa fa-bars"></i> </a>
       </div>
    </header>
